--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.18.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.10",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
