--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
